various suggestion filter changes

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -650,9 +650,12 @@
 	"arenella-suggestions-experience": "Years Exp",
 	"arenella-suggestions-french": "French",
 	"arenella-suggestions-geoZones": "Zones",
+	"arenella-suggestions-german": "German",
 	"arenella-suggestions-include": "Include",
+	"arenella-suggestions-include-requires-sponsorship-candidates": "Requires Sponsorship",
 	"arenella-suggestions-include-unavailable-candidates": "Unavailable Candidates",
 	"arenella-suggestions-inlinecv-btn-back": "Back",
+	"arenella-suggestions-italian": "Italian",
 	"arenella-suggestions-job-title": "Job Title",
 	"arenella-suggestions-language": "Languages",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choose Subscription",
@@ -662,6 +665,8 @@
 	"arenella-suggestions-paid-subscription-text-2-geozone": "The Zone feature provides you access to candidates in countries other that the main countries supported by the Arenella-ICT platform. It also allows for faster filtering by groups of countries.",
 	"arenella-suggestions-paid-subscription-text-3": "Total unavailable Candidates",
 	"arenella-suggestions-permanent": "Perm",
+	"arenella-suggestions-polish": "Polish",
+	"arenella-suggestions-portuguese": "Portuguese",
 	"arenella-suggestions-profile-box-contact-btn-send": "Send",
 	"arenella-suggestions-profile-box-contact-hdr": "Message Candidate",
 	"arenella-suggestions-profile-box-contact-msg-failed": "Failed to Send Message",
@@ -695,6 +700,7 @@
 	"arenella-suggestions-profile-introduction": "Introduction",
 	"arenella-suggestions-saved-candidate-btn-back": "Back",
 	"arenella-suggestions-skills": "Skills",
+	"arenella-suggestions-spanish": "Spanish",
 	"arenella-suggestions-to": "TO",
 	"AUSTRIA": "Austria",
 	"BELGIUM": "Belgium",
