--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -650,9 +650,12 @@
 	"arenella-suggestions-experience": "Années d'expérience",
 	"arenella-suggestions-french": "Français",
 	"arenella-suggestions-geoZones": "Zones",
+	"arenella-suggestions-german": "Allemand",
 	"arenella-suggestions-include": "Comprendre",
+	"arenella-suggestions-include-requires-sponsorship-candidates": "Nécessite un parrainage",
 	"arenella-suggestions-include-unavailable-candidates": "Candidats indisponibles",
 	"arenella-suggestions-inlinecv-btn-back": "Retour",
+	"arenella-suggestions-italian": "Italien",
 	"arenella-suggestions-job-title": "Titre d'emploi",
 	"arenella-suggestions-language": "Langues",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choisissez l'abonnement",
@@ -662,6 +665,8 @@
 	"arenella-suggestions-paid-subscription-text-2-geozone": "La fonctionnalité Zone vous donne accès à des candidats dans des pays autres que les principaux pays pris en charge par la plateforme Arenella-ICT. Il permet également un filtrage plus rapide par groupes de pays.",
 	"arenella-suggestions-paid-subscription-text-3": "Total de candidats indisponibles",
 	"arenella-suggestions-permanent": "Perm",
+	"arenella-suggestions-polish": "Polonais",
+	"arenella-suggestions-portuguese": "Portugais",
 	"arenella-suggestions-profile-box-contact-btn-send": "Envoyer",
 	"arenella-suggestions-profile-box-contact-hdr": "Message candidat",
 	"arenella-suggestions-profile-box-contact-msg-failed": "Échec de l'envoi du message",
@@ -695,6 +700,7 @@
 	"arenella-suggestions-profile-introduction": "Introduction",
 	"arenella-suggestions-saved-candidate-btn-back": "Retour",
 	"arenella-suggestions-skills": "Compétences",
+	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "À",
 	"AUSTRIA": "L'Autriche",
 	"BELGIUM": "Belgique",
