--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -650,9 +650,12 @@
 	"arenella-suggestions-experience": "Jaren ervaring",
 	"arenella-suggestions-french": "Frans",
 	"arenella-suggestions-geoZones": "Zones",
+	"arenella-suggestions-german": "Duits",
 	"arenella-suggestions-include": "Omvatten",
+	"arenella-suggestions-include-requires-sponsorship-candidates": "Vereist sponsoring",
 	"arenella-suggestions-include-unavailable-candidates": "N/A Kandidaten",
 	"arenella-suggestions-inlinecv-btn-back": "Terug",
+	"arenella-suggestions-italian": "Italiaans",
 	"arenella-suggestions-job-title": "Functietitel",
 	"arenella-suggestions-language": "Talen",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Kies abonnement",
@@ -662,6 +665,8 @@
 	"arenella-suggestions-paid-subscription-text-2-geozone": "De Zone-functie biedt u toegang tot kandidaten in andere landen dan de belangrijkste landen die door het Arenella-ICT-platform worden ondersteund. Het maakt ook sneller filteren op groepen landen mogelijk.",
 	"arenella-suggestions-paid-subscription-text-3": "Totaal aantal niet-beschikbare kandidaten",
 	"arenella-suggestions-permanent": "Vaste",
+	"arenella-suggestions-polish": "Pools",
+	"arenella-suggestions-portuguese": "Portugees",
 	"arenella-suggestions-profile-box-contact-btn-send": "Versturen",
 	"arenella-suggestions-profile-box-contact-hdr": "Bericht kandidaat",
 	"arenella-suggestions-profile-box-contact-msg-failed": "Kan bericht niet verzenden",
@@ -695,6 +700,7 @@
 	"arenella-suggestions-profile-introduction": "Introductie",
 	"arenella-suggestions-saved-candidate-btn-back": "Terug",
 	"arenella-suggestions-skills": "Vaardigheden",
+	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "Naar",
 	"AUSTRIA": "Oostenrijk",
 	"BELGIUM": "België",
