Unavailble suggestions in serch results and public page text updates

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -149,7 +149,7 @@
 	"arenella-faqs-q7-question": "Do candidates know their details are being shared",
 	"arenella-faqs-q8-answer": "Yes. Candidates availability is checked based upon their LinkedIn status roughly every two weeks. Providing their statuses are up to date the majority of candidates \n\t\t\t\t\t\t\t\tare actively looking for a new role",
 	"arenella-faqs-q8-question": "Are the candidates actually available",
-	"arenella-faqs-q9-answer": "There are candidates available in the following countries",
+	"arenella-faqs-q9-answer": "There are candidates available all over Europe ",
 	"arenella-faqs-q9-answer-be": "Belgium",
 	"arenella-faqs-q9-answer-ie": "The Republic Of Ireland",
 	"arenella-faqs-q9-answer-nl": "The Netherlands",
@@ -158,27 +158,27 @@
 	"arenella-faqs-q9-question": "What countries are the candidates located in",
 	"arenella-faqs-q10-answer": "Yes. The candidates are living in the county where they are looking for work and are either nationals of that country or have a valid work visa.",
 	"arenella-faqs-q10-question": "Are the candidates local",
-	"arenella-faqs-q11-answer": "When a candidate is registered we make a note of their ability with the following languages",
+	"arenella-faqs-q11-answer": "The candidates speak a variety of languages. You can filter on the languages that you are interested in to find IT candidates that speak those languages and see their level of fluency in those languages.",
 	"arenella-faqs-q11-answer-en": "English",
 	"arenella-faqs-q11-answer-fr": "French",
 	"arenella-faqs-q11-answer-nl": "Dutch",
 	"arenella-faqs-q11-answer-summary": "You can filter on candidates that speak the language you are looking for",
 	"arenella-faqs-q11-question": "What languages do the candidates speak",
-	"arenella-homepage-candidates-1": "Candidates have either uploaded their CV to the site or have given permission for that to happen with the\n\t\t\t\tintention of having recruiters contact them. Our candidates are open to working with recruiters and actively\n\t\t\t\tlooking for a new role via a recruitment agency.",
-	"arenella-homepage-candidates-2": "Candidate no longer available are removed from the search results. Their status is then checked every two month to determine if they have become available. We aim to reduce the your spent contacting candidates that are not actively looking for a role.",
+	"arenella-homepage-candidates-1": "Candidates have either uploaded their CV to the site or have given permission for that to happen, with the\n\t\t\t\tintention of having recruiters contact them. Our candidates are open to working with recruiters and actively\n\t\t\t\tlooking for a new role via a recruitment agency.",
+	"arenella-homepage-candidates-2": "We check candidate availability roughly every two weeks to ensure availability based upon their LI status. Candidate no longer available are removed from the search results. Their status is then checked every two month to determine if they have become available again. We aim to reduce your spent contacting candidates that are not actively looking for a role. IT Recruiters with a paid subscription also have the option to filter on and contact the unavailable candidates.",
 	"arenella-homepage-candidates-3": "We check candidate availability roughly every two weeks to ensure availability based upon their LI status. Once\na candidate is no longer available they are removed from the search results. Their status is then checked every\ntwo month to determines if they have become available. We aim to reduce the your spent contacting candidates\nthat are not actively looking for a role.",
-	"arenella-homepage-candidates-4": "Candidates are based in the Netherlands, Belgium, UK and Ireland and have the right to work. There are candidates for most types of IT function on both a permanent and freelance basis. There are English, Dutch and French speaking candidates.\t",
-	"arenella-homepage-fees-1": "You will be pleased to hear there are no additional margins or fees for placing a candidate. The only payment is the yearly subscription in the case you opt for a paid, rather than free credit based subscription.",
+	"arenella-homepage-candidates-4": "Candidates are based throughout Europe and have the right to work. There are candidates for most types of IT function on both a permanent and freelance basis. ",
+	"arenella-homepage-fees-1": "You will be pleased to hear there are no additional margins or fees for placing a candidate. The only payment is the yearly subscription in the case you opt for a paid, rather than free credit based subscription option.",
 	"arenella-homepage-fees-2": "Arenella-ICT is a platform and we do not work as a recruitment agency ourselves. Therefore when you place a candidate any contract is between you and the candidate. Arenella-ICT stays out of contracts and negotiations.",
 	"arenella-homepage-func-jb-desc": "A Job board for advertising roles to candidates both registered and unregistered with the platform",
 	"arenella-homepage-func-jb-title": "Job Board",
-	"arenella-homepage-func-market-desc": "A way for recruiters to collaborate on roles they are looking to fill and candidates they are looking to place.",
+	"arenella-homepage-func-market-desc": "Collaborate with other agencies and clients to fill their open roles or request candidates for your own open roles.",
 	"arenella-homepage-func-market-title": "Marketplace",
 	"arenella-homepage-func-news-desc": "Insight into candidate updates (availability, CV update, profile update)",
 	"arenella-homepage-func-news-title": "News Feed",
 	"arenella-homepage-func-suggestions-desc": "A CV database with advanced algorithms to find the best candidates in a matter of seconds.",
 	"arenella-homepage-func-suggestions-title": "Suggestions",
-	"arenella-homepage-getting-started": "The first step is to create an account. You will be asked for your name, your email address and company name. You will receive an email with your login details. After 30 days of unlimited access you have the option to continue with a free credit based plan or with a paid subscription with unlimited access to the recruiter features.",
+	"arenella-homepage-getting-started": "The first step is to create an account. You will be asked for your name, your email address and company name. You will receive an email with your login details. ",
 	"arenella-homepage-title-candidates": "The Candidates",
 	"arenella-homepage-title-fees": "Fees and Contracts",
 	"arenella-homepage-title-functionality": "Functionality",
@@ -663,7 +663,8 @@
 	"arenella-suggestions-paid-subscription-text-1": "This options is only available to users with a paid subscription.",
 	"arenella-suggestions-paid-subscription-text-2": "You can choose a paid subscription by clicking on the following link",
 	"arenella-suggestions-paid-subscription-text-2-geozone": "The Zone feature provides you access to candidates in countries other that the main countries supported by the Arenella-ICT platform. It also allows for faster filtering by groups of countries.",
-	"arenella-suggestions-paid-subscription-text-3": "Total unavailable Candidates",
+	"arenella-suggestions-paid-subscription-text-3": "With a paid subscription you can access candidates that are in the system but currently marked as being on a project. ",
+	"arenella-suggestions-paid-subscription-text-4": "Total unavailable candidates",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-polish": "Polish",
 	"arenella-suggestions-portuguese": "Portuguese",
