--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -149,7 +149,7 @@
 	"arenella-faqs-q7-question": "Les candidats savent-ils que leurs coordonnées sont partagées",
 	"arenella-faqs-q8-answer": "Oui. La disponibilité des candidats est vérifiée en fonction de leur statut LinkedIn environ toutes les deux semaines. À condition que leurs statuts soient à jour, la majorité des candidats\nrecherchent activement un nouveau rôle",
 	"arenella-faqs-q8-question": "Les candidats sont-ils réellement disponibles",
-	"arenella-faqs-q9-answer": "Il y a des candidats disponibles dans les pays suivants",
+	"arenella-faqs-q9-answer": "Il y a des candidats disponibles partout en Europe ",
 	"arenella-faqs-q9-answer-be": "Belgique",
 	"arenella-faqs-q9-answer-ie": "La République d'Irlande",
 	"arenella-faqs-q9-answer-nl": "Les Pays-Bas",
@@ -158,27 +158,27 @@
 	"arenella-faqs-q9-question": "Dans quels pays se trouvent les candidats",
 	"arenella-faqs-q10-answer": "Oui. Les candidats vivent dans le comté où ils recherchent du travail et sont soit ressortissants de ce pays, soit disposent d'un visa de travail valide.",
 	"arenella-faqs-q10-question": "Les candidats sont-ils locaux",
-	"arenella-faqs-q11-answer": "Lorsqu'un candidat est inscrit, nous notons sa capacité dans les langues suivantes",
+	"arenella-faqs-q11-answer": "Les candidats parlent diverses langues. Vous pouvez filtrer sur les langues qui vous intéressent pour trouver des candidats informatiques qui parlent ces langues et voir leur niveau de maîtrise de ces langues.",
 	"arenella-faqs-q11-answer-en": "Anglais",
 	"arenella-faqs-q11-answer-fr": "Français",
 	"arenella-faqs-q11-answer-nl": "Néerlandais",
 	"arenella-faqs-q11-answer-summary": "Vous pouvez filtrer sur les candidats qui parlent la langue que vous recherchez",
 	"arenella-faqs-q11-question": "Quelles langues parlent les candidats",
 	"arenella-homepage-candidates-1": "Les candidats ont soit téléchargé leur CV sur le site, soit donné leur autorisation dans le but d&#39;être contactés par des recruteurs. Nos candidats sont ouverts à travailler avec des recruteurs et recherchent activement un nouveau rôle via une agence de recrutement.",
-	"arenella-homepage-candidates-2": "Les candidats qui ne sont plus disponibles sont supprimés des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s&#39;ils sont devenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste.",
+	"arenella-homepage-candidates-2": "Nous vérifions la disponibilité des candidats environ toutes les deux semaines pour garantir la disponibilité en fonction de leur statut LI. Les candidats qui ne sont plus disponibles sont supprimés des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s'ils sont redevenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste. Les recruteurs informatiques disposant d'un abonnement payant ont également la possibilité de filtrer et de contacter les candidats indisponibles.",
 	"arenella-homepage-candidates-3": "Nous vérifions la disponibilité des candidats environ toutes les deux semaines pour garantir la disponibilité en fonction de leur statut LI. Lorsqu&#39;un candidat n&#39;est plus disponible, il est supprimé des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s&#39;ils sont devenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste.",
-	"arenella-homepage-candidates-4": "Les candidats sont basés aux Pays-Bas, en Belgique, au Royaume-Uni et en Irlande et ont le droit de travailler. Il existe des candidats pour la plupart des types de fonctions informatiques, en tant que permanents ou indépendants. Il y a des candidats anglophones, néerlandais et francophones.\t",
-	"arenella-homepage-fees-1": "Vous serez heureux d’apprendre qu’il n’y a pas de marges ni de frais supplémentaires pour placer un candidat. Le seul paiement est l&#39;abonnement annuel dans le cas où vous optez pour un abonnement payant plutôt que gratuit basé sur un crédit.",
+	"arenella-homepage-candidates-4": "Les candidats sont basés dans toute l'Europe et ont le droit de travailler. Il existe des candidats pour la plupart des types de fonctions informatiques, en tant que permanents ou indépendants. ",
+	"arenella-homepage-fees-1": "Vous serez heureux d’apprendre qu’il n’y a pas de marges ni de frais supplémentaires pour placer un candidat. Le seul paiement est l'abonnement annuel dans le cas où vous optez pour une option d'abonnement payante plutôt que gratuite basée sur un crédit.",
 	"arenella-homepage-fees-2": "Arenella-ICT est une plateforme et nous ne travaillons pas nous-mêmes comme une agence de recrutement. Par conséquent, lorsque vous placez un candidat, tout contrat est conclu entre vous et le candidat. Arenella-ICT reste en dehors des contrats et des négociations.",
 	"arenella-homepage-func-jb-desc": "Un site d&#39;emploi pour annoncer des postes aux candidats inscrits et non inscrits sur la plateforme",
 	"arenella-homepage-func-jb-title": "Emplois",
-	"arenella-homepage-func-market-desc": "Un moyen pour les recruteurs de collaborer sur les postes qu&#39;ils cherchent à pourvoir et les candidats qu&#39;ils cherchent à placer.",
+	"arenella-homepage-func-market-desc": "Collaborez avec d'autres agences et clients pour pourvoir leurs postes vacants ou sollicitez des candidats pour vos propres postes ouverts.",
 	"arenella-homepage-func-market-title": "Marché",
 	"arenella-homepage-func-news-desc": "Aperçu des mises à jour des candidats (disponibilité, mise à jour du CV, mise à jour du profil)",
 	"arenella-homepage-func-news-title": "Nouvelles",
 	"arenella-homepage-func-suggestions-desc": "Une base de CV avec des algorithmes avancés pour trouver les meilleurs candidats en quelques secondes.",
 	"arenella-homepage-func-suggestions-title": "Suggestions",
-	"arenella-homepage-getting-started": "La première étape consiste à créer un compte. Il vous sera demandé votre nom, votre adresse e-mail et le nom de votre entreprise. Vous recevrez un email avec vos informations de connexion. Après 30 jours d&#39;accès illimité, vous avez la possibilité de continuer avec un forfait gratuit basé sur des crédits ou avec un abonnement payant avec un accès illimité aux fonctionnalités du recruteur.",
+	"arenella-homepage-getting-started": "La première étape consiste à créer un compte. Il vous sera demandé votre nom, votre adresse e-mail et le nom de votre entreprise. Vous recevrez un email avec vos informations de connexion. ",
 	"arenella-homepage-title-candidates": "Les candidats",
 	"arenella-homepage-title-fees": "Honoraires et contrats",
 	"arenella-homepage-title-functionality": "Fonctionnalité",
@@ -663,7 +663,8 @@
 	"arenella-suggestions-paid-subscription-text-1": "Cette option n'est disponible que pour les utilisateurs disposant d'un abonnement payant.",
 	"arenella-suggestions-paid-subscription-text-2": "Vous pouvez choisir un abonnement payant en cliquant sur le lien suivant",
 	"arenella-suggestions-paid-subscription-text-2-geozone": "La fonctionnalité Zone vous donne accès à des candidats dans des pays autres que les principaux pays pris en charge par la plateforme Arenella-ICT. Il permet également un filtrage plus rapide par groupes de pays.",
-	"arenella-suggestions-paid-subscription-text-3": "Total de candidats indisponibles",
+	"arenella-suggestions-paid-subscription-text-3": "Avec un abonnement payant, vous pouvez accéder aux candidats qui sont dans le système mais actuellement marqués comme étant sur un projet. ",
+	"arenella-suggestions-paid-subscription-text-4": "Total de candidats indisponibles",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-polish": "Polonais",
 	"arenella-suggestions-portuguese": "Portugais",
