--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -149,7 +149,7 @@
 	"arenella-faqs-q7-question": "Weten kandidaten dat hun gegevens worden gedeeld?",
 	"arenella-faqs-q8-answer": "Ja. De beschikbaarheid van kandidaten wordt ongeveer elke twee weken gecontroleerd op basis van hun LinkedIn-status. Op voorwaarde dat hun status up-to-date is, is de meerderheid van de kandidaten op de hoogte\nzijn actief op zoek naar een nieuwe rol",
 	"arenella-faqs-q8-question": "Zijn de kandidaten daadwerkelijk beschikbaar?",
-	"arenella-faqs-q9-answer": "Er zijn kandidaten beschikbaar in de volgende landen",
+	"arenella-faqs-q9-answer": "Er zijn kandidaten beschikbaar in heel Europa ",
 	"arenella-faqs-q9-answer-be": "België",
 	"arenella-faqs-q9-answer-ie": "De republiek van Ierland",
 	"arenella-faqs-q9-answer-nl": "Nederland",
@@ -158,27 +158,27 @@
 	"arenella-faqs-q9-question": "In welke landen zijn de kandidaten gevestigd?",
 	"arenella-faqs-q10-answer": "Ja. De kandidaten wonen in de provincie waar ze werk zoeken en hebben de nationaliteit van dat land of beschikken over een geldig werkvisum.",
 	"arenella-faqs-q10-question": "Zijn de kandidaten lokaal",
-	"arenella-faqs-q11-answer": "Wanneer een kandidaat wordt geregistreerd, noteren we zijn vaardigheid in de volgende talen",
+	"arenella-faqs-q11-answer": "De kandidaten spreken verschillende talen. U kunt filteren op de talen waarin u geïnteresseerd bent om IT-kandidaten te vinden die deze talen spreken en hun niveau van beheersing van die talen te zien.",
 	"arenella-faqs-q11-answer-en": "Engels",
 	"arenella-faqs-q11-answer-fr": "Frans",
 	"arenella-faqs-q11-answer-nl": "Nederlands",
 	"arenella-faqs-q11-answer-summary": "U kunt filteren op kandidaten die de taal spreken waarnaar u op zoek bent",
 	"arenella-faqs-q11-question": "Welke talen spreken de kandidaten",
 	"arenella-homepage-candidates-1": "Kandidaten hebben hun CV naar de site geüpload of hebben daar toestemming voor gegeven met de bedoeling dat recruiters contact met hen opnemen. Onze kandidaten staan ​​open voor samenwerking met recruiters en zijn actief op zoek naar een nieuwe rol via een recruitmentbureau.",
-	"arenella-homepage-candidates-2": "Kandidaten die niet meer beschikbaar zijn, worden uit de zoekresultaten verwijderd. Vervolgens wordt elke twee maanden hun status gecontroleerd om te bepalen of ze beschikbaar zijn gekomen. Wij streven ernaar om de kosten die u besteedt aan het contacteren van kandidaten die niet actief op zoek zijn naar een functie, te verminderen.",
+	"arenella-homepage-candidates-2": "We controleren de beschikbaarheid van kandidaten ongeveer elke twee weken om de beschikbaarheid te garanderen op basis van hun LI-status. Kandidaten die niet meer beschikbaar zijn, worden uit de zoekresultaten verwijderd. Vervolgens wordt elke twee maanden gecontroleerd of ze weer beschikbaar zijn. Wij streven ernaar om uw uitgaven aan contact met kandidaten die niet actief op zoek zijn naar een functie, te verminderen. IT Recruiters met een betaald abonnement hebben ook de mogelijkheid om te filteren en contact op te nemen met de niet-beschikbare kandidaten.",
 	"arenella-homepage-candidates-3": "We controleren de beschikbaarheid van kandidaten ongeveer elke twee weken om de beschikbaarheid te garanderen op basis van hun LI-status. Zodra een kandidaat niet meer beschikbaar is, wordt deze uit de zoekresultaten verwijderd. Vervolgens wordt elke twee maanden hun status gecontroleerd om te bepalen of ze beschikbaar zijn gekomen. Wij streven ernaar om de kosten die u besteedt aan het contacteren van kandidaten die niet actief op zoek zijn naar een functie, te verminderen.",
-	"arenella-homepage-candidates-4": "Kandidaten zijn gevestigd in Nederland, België, Groot-Brittannië en Ierland en hebben recht op werk. Voor de meeste soorten IT-functies zijn er kandidaten op zowel vaste als freelance basis. Er zijn Engels-, Nederlands- en Franstalige kandidaten.\t",
-	"arenella-homepage-fees-1": "U zult blij zijn te horen dat er geen extra marges of kosten verbonden zijn aan het plaatsen van een kandidaat. De enige betaling is het jaarabonnement als u kiest voor een betaald abonnement in plaats van een gratis abonnement op basis van krediet.",
+	"arenella-homepage-candidates-4": "Kandidaten zijn gevestigd in heel Europa en hebben het recht om te werken. Voor de meeste soorten IT-functies zijn er kandidaten op zowel vaste als freelance basis. ",
+	"arenella-homepage-fees-1": "U zult blij zijn te horen dat er geen extra marges of kosten verbonden zijn aan het plaatsen van een kandidaat. De enige betaling is het jaarabonnement als u kiest voor een betaalde, in plaats van een gratis, op krediet gebaseerde abonnementsoptie.",
 	"arenella-homepage-fees-2": "Arenella-ICT is een platform en wij werken zelf niet als wervingsbureau. Wanneer u een kandidaat plaatst, is er dus sprake van een contract tussen u en de kandidaat. Arenella-ICT houdt zich buiten contracten en onderhandelingen.",
 	"arenella-homepage-func-jb-desc": "Een vacaturebank voor het adverteren van functies voor kandidaten, zowel geregistreerd als niet-geregistreerd bij het platform",
 	"arenella-homepage-func-jb-title": "Banen",
-	"arenella-homepage-func-market-desc": "Een manier voor recruiters om samen te werken aan functies die ze willen vervullen en kandidaten die ze willen plaatsen.",
+	"arenella-homepage-func-market-desc": "Werk samen met andere bureaus en klanten om hun openstaande vacatures te vervullen of vraag kandidaten voor uw eigen openstaande vacatures.",
 	"arenella-homepage-func-market-title": "Marktplaats",
 	"arenella-homepage-func-news-desc": "Inzicht in kandidaat-updates (beschikbaarheid, CV-update, profielupdate)",
 	"arenella-homepage-func-news-title": "Nieuwsfeed",
 	"arenella-homepage-func-suggestions-desc": "Een CV-database met geavanceerde algoritmen om binnen enkele seconden de beste kandidaten te vinden.",
 	"arenella-homepage-func-suggestions-title": "Suggesties",
-	"arenella-homepage-getting-started": "De eerste stap is het aanmaken van een account. Er wordt gevraagd naar uw naam, uw e-mailadres en bedrijfsnaam. U ontvangt een e-mail met uw inloggegevens. Na 30 dagen onbeperkte toegang heb je de mogelijkheid om door te gaan met een gratis op krediet gebaseerd abonnement of met een betaald abonnement met onbeperkte toegang tot de recruiterfuncties.",
+	"arenella-homepage-getting-started": "De eerste stap is het aanmaken van een account. Er wordt gevraagd naar uw naam, uw e-mailadres en bedrijfsnaam. U ontvangt een e-mail met uw inloggegevens. ",
 	"arenella-homepage-title-candidates": "De kandidaten",
 	"arenella-homepage-title-fees": "Tarieven en contracten",
 	"arenella-homepage-title-functionality": "Functionaliteit",
@@ -663,7 +663,8 @@
 	"arenella-suggestions-paid-subscription-text-1": "Deze optie is alleen beschikbaar voor gebruikers met een betaald abonnement.",
 	"arenella-suggestions-paid-subscription-text-2": "U kunt een betaald abonnement kiezen door op de volgende link te klikken",
 	"arenella-suggestions-paid-subscription-text-2-geozone": "De Zone-functie biedt u toegang tot kandidaten in andere landen dan de belangrijkste landen die door het Arenella-ICT-platform worden ondersteund. Het maakt ook sneller filteren op groepen landen mogelijk.",
-	"arenella-suggestions-paid-subscription-text-3": "Totaal aantal niet-beschikbare kandidaten",
+	"arenella-suggestions-paid-subscription-text-3": "Met een betaald abonnement heeft u toegang tot kandidaten die in het systeem staan, maar momenteel zijn gemarkeerd als deel uitmakend van een project. ",
+	"arenella-suggestions-paid-subscription-text-4": "Totaal aantal niet-beschikbare kandidaten",
 	"arenella-suggestions-permanent": "Vaste",
 	"arenella-suggestions-polish": "Pools",
 	"arenella-suggestions-portuguese": "Portugees",
