available/unavailable separation

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -14,12 +14,14 @@
 	"arenella-accounts-tabacandidates-name": "Name",
 	"arenella-accounts-tabacandidates-surname": "Surname",
 	"arenella-accounts-tabavailability-actions": "Actions",
+	"arenella-accounts-tabavailability-available": "Available",
 	"arenella-accounts-tabavailability-btn-available": "Available",
 	"arenella-accounts-tabavailability-btn-disable": "Disable",
 	"arenella-accounts-tabavailability-id": "Id",
 	"arenella-accounts-tabavailability-name": "Name",
 	"arenella-accounts-tabavailability-pos": "Pos",
 	"arenella-accounts-tabavailability-role": "Role",
+	"arenella-accounts-tabavailability-unavailable": "Unavailable",
 	"arenella-accounts-tabcandidates-active": "Active",
 	"arenella-accounts-tabcandidates-company": "Company",
 	"arenella-accounts-tabcandidates-email": "Email",
