--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -14,12 +14,14 @@
 	"arenella-accounts-tabacandidates-name": "Prénom",
 	"arenella-accounts-tabacandidates-surname": "Nom de famille",
 	"arenella-accounts-tabavailability-actions": "Actes",
+	"arenella-accounts-tabavailability-available": "Disponible",
 	"arenella-accounts-tabavailability-btn-available": "Disponible",
 	"arenella-accounts-tabavailability-btn-disable": "Désactiver",
 	"arenella-accounts-tabavailability-id": "Id",
 	"arenella-accounts-tabavailability-name": "Prénom",
 	"arenella-accounts-tabavailability-pos": "Pos",
 	"arenella-accounts-tabavailability-role": "Rôle",
+	"arenella-accounts-tabavailability-unavailable": "Indisponible",
 	"arenella-accounts-tabcandidates-active": "Actif",
 	"arenella-accounts-tabcandidates-company": "Entreprise",
 	"arenella-accounts-tabcandidates-email": "Email",
