--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -14,12 +14,14 @@
 	"arenella-accounts-tabacandidates-name": "Naam",
 	"arenella-accounts-tabacandidates-surname": "Achternaam",
 	"arenella-accounts-tabavailability-actions": "Acties",
+	"arenella-accounts-tabavailability-available": "Beschikbaar",
 	"arenella-accounts-tabavailability-btn-available": "Beschikbaar",
 	"arenella-accounts-tabavailability-btn-disable": "Onbruikbaar maken",
 	"arenella-accounts-tabavailability-id": "Id",
 	"arenella-accounts-tabavailability-name": "Naam",
 	"arenella-accounts-tabavailability-pos": "Pos",
 	"arenella-accounts-tabavailability-role": "Rol",
+	"arenella-accounts-tabavailability-unavailable": "Niet beschikbaar",
 	"arenella-accounts-tabcandidates-active": "Actief",
 	"arenella-accounts-tabcandidates-company": "Bedrijf",
 	"arenella-accounts-tabcandidates-email": "E-mail",
