french spelling fix

--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -97,9 +97,9 @@
 	"arenella-app-no-credits-title": "0 crédits restants",
 	"arenella-app-validation-errors-text": "Malheureusement, il n'a pas été possible d'effectuer les actions car :",
 	"arenella-app-validation-errors-title": "Erreurs de validation",
-	"arenella-create-candidate-additional-info-text": "En fournissant ces informations supplémentaires facultatives, vous contribuerez à créer votre profil\ndémarquez-vous auprès des recruteurs",
+	"arenella-create-candidate-additional-info-text": "En fournissant ces informations complémentaires facultatives, vous contribuerez à vous démarquez auprès des recruteurs.",
 	"arenella-create-candidate-additional-info-title": "Informations Complémentaires",
-	"arenella-create-candidate-agreement": "En téléchargeant votre CV et votre profil, vous acceptez que votre\nCV et détails à stocker dans le système et partagés dans le\nréseau de recruteurs et de clients.",
+	"arenella-create-candidate-agreement": "En téléchargeant votre CV et votre profil, vous acceptez que votre CV et vos détails soient stockés dans le système et partagés au réseau de recruteurs et de clients.",
 	"arenella-create-candidate-btn-save": "Enregistrer ",
 	"arenella-create-candidate-contract": "Contrat ",
 	"arenella-create-candidate-contract-rate": "Taux de contrat",
@@ -107,14 +107,14 @@
 	"arenella-create-candidate-day": "Journée",
 	"arenella-create-candidate-email": "Email",
 	"arenella-create-candidate-eur": "EUR",
-	"arenella-create-candidate-firstname": "nom",
+	"arenella-create-candidate-firstname": "Prénom",
 	"arenella-create-candidate-from": "De",
 	"arenella-create-candidate-gbp": "GBP",
 	"arenella-create-candidate-hour": "Heure",
-	"arenella-create-candidate-intro": "Les recruteurs, les agences informatiques et les responsables du recrutement sont tous indépendants de la plateforme Arenella-ICT, faisant d'Arenella-ICT un guichet unique pour atteindre l'ensemble de l'entreprise.\nréseau de nouvelles opportunités. En téléchargeant votre CV et en créant votre profil, vous accédez à ce réseau de nouvelles possibilités.",
+	"arenella-create-candidate-intro": "Les recruteurs, agences informatiques et responsables du recrutement sont tous indépendants de la plateforme Arenella-ICT, faisant d'Arenella-ICT un guichet unique pour atteindre l'ensemble de l'entreprise et créer de nouvelles opportunités. En téléchargeant votre CV et en créant votre profil, vous accédez à ce réseau de nouvelles opportunités.",
 	"arenella-create-candidate-perm": "Perm",
 	"arenella-create-candidate-perm-rate": "Taux de perm",
-	"arenella-create-candidate-personal-intro": "Introduction personnelle",
+	"arenella-create-candidate-personal-intro": "Présentez-vous",
 	"arenella-create-candidate-photo": "Photo de profil [ .jpeg / .png ] Max 1 Mo",
 	"arenella-create-candidate-surname": "Nom de famille",
 	"arenella-create-candidate-title": "S'inscrire comme candidat",
@@ -724,7 +724,7 @@
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
 	"create-candidate-failure": "Impossible d'ajouter un candidat",
-	"create-candidate-success": "Vos coordonnées ont été téléchargées avec succès. Ils vont maintenant être examinés et ajoutés au système",
+	"create-candidate-success": "Vos données ont été téléchargées avec succès. Elles vont maintenant être examinées puis ajoutées au système.",
 	"CROATIA": "Croatie",
 	"CYPRUS": "Chypre",
 	"CZECH_REPUBLIC": "République tchèque",
