suggeston filter type - English text only

--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -667,7 +667,7 @@
 	"arenella-suggestions-include-unavailable-candidates": "Candidats indisponibles",
 	"arenella-suggestions-inlinecv-btn-back": "Retour",
 	"arenella-suggestions-italian": "Italien",
-	"arenella-suggestions-job-title": "Titre d'emploi",
+	"arenella-suggestions-job-title": "Cherche",
 	"arenella-suggestions-language": "Langues",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choisissez l'abonnement",
 	"arenella-suggestions-paid-subscription-option": "Fonctionnalité d'abonnement payant",
