--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -667,7 +667,7 @@
 	"arenella-suggestions-include-unavailable-candidates": "N/A Kandidaten",
 	"arenella-suggestions-inlinecv-btn-back": "Terug",
 	"arenella-suggestions-italian": "Italiaans",
-	"arenella-suggestions-job-title": "Functietitel",
+	"arenella-suggestions-job-title": "Zoek",
 	"arenella-suggestions-language": "Talen",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Kies abonnement",
 	"arenella-suggestions-paid-subscription-option": "Betaalde abonnementsfunctie",
