--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -667,7 +667,7 @@
 	"arenella-suggestions-include-unavailable-candidates": "Unavailable Candidates",
 	"arenella-suggestions-inlinecv-btn-back": "Back",
 	"arenella-suggestions-italian": "Italian",
-	"arenella-suggestions-job-title": "Job Title",
+	"arenella-suggestions-job-title": "Search",
 	"arenella-suggestions-language": "Languages",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choose Subscription",
 	"arenella-suggestions-paid-subscription-option": "Paid subscription feature",
